--- a/src/app/main/main.slim
+++ b/src/app/main/main.slim
@@ -13,8 +13,8 @@
       .thumbnail
         img.pull-right alt="{{awesomeThing.title}}" ng-src="assets/images/{{awesomeThing.logo}}" /
         .caption
-          h3  {awesomeThing.title} 
-          p  {awesomeThing.description} 
+          h3  {{awesomeThing.title}}
+          p  {{awesomeThing.description}}
           p
             a ng-href=("{{awesomeThing.url}}") {{awesomeThing.url}}
   hr/
