Add About and Contact modules

--- a/src/app/components/navbar/navbar.slim
+++ b/src/app/components/navbar/navbar.slim
@@ -7,10 +7,10 @@ nav.navbar.navbar-static-top.navbar-inverse ng-controller="NavbarCtrl"
     #bs-example-navbar-collapse-6.collapse.navbar-collapse
       ul.nav.navbar-nav
         li.active
-          a ng-href="#"  Home
+          a ui-sref="home"  Home
         li
-          a ng-href="#"  About
+          a ui-sref="about"  About
         li
-          a ng-href="#"  Contact
+          a ui-sref="contact"  Contact
       ul.nav.navbar-nav.navbar-right
         li Current date:  { date | date:'yyyy-MM-dd' } 
