Add Isotope directive and sample

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -13,6 +13,19 @@
   }
 }
 
+.item_box {
+  width: 760px;
+  display: block;
+}
+.item {
+  height: 150px;
+  width: 25%;
+
+}
+.item.w2 { width: 50%; }
+
+
+
 /* Do not remove this comments bellow. It's the markers used by gulp-inject to inject
    all your sass files automatically */
 // injector
