--- a/src/app/main/main.slim
+++ b/src/app/main/main.slim
@@ -8,15 +8,11 @@
       | Always a pleasure scaffolding your apps.
     p
       a.btn.btn-lg.btn-success ng-href="#"  Splendid!
-  .row
-    .col-sm-6.col-md-4 ng-repeat=("awesomeThing in awesomeThings | orderBy:'rank'") 
-      .thumbnail
-        img.pull-right alt="{{awesomeThing.title}}" ng-src="assets/images/{{awesomeThing.logo}}" /
-        .caption
-          h3  {{awesomeThing.title}}
-          p  {{awesomeThing.description}}
-          p
-            a ng-href=("{{awesomeThing.url}}") {{awesomeThing.url}}
+
+  isotope.item_box
+    .item ng-repeat=("brick in bricks")
+      img ng-src==("{{ brick.src }}") alt="A isotope brick"
+      
   hr/
   .footer
     p
