--- a/src/app/components/navbar/navbar.slim
+++ b/src/app/components/navbar/navbar.slim
@@ -1,9 +1,9 @@
 nav.navbar.navbar-static-top.navbar-default ng-controller="NavbarCtrl" 
   .container
     .navbar-header
-      a.navbar-brand href="https://www.facebook.com/90kyumaru" 
+      a.navbar-brand href="https://www.facebook.com/oshimaisland" 
         span.glyphicon.glyphicon-camera
-        | KyumaruGram
+        | Ohshimagram
     #bs-example-navbar-collapse-6.collapse.navbar-collapse
       ul.nav.navbar-nav
         li.active
