--- a/src/app/main/main.slim
+++ b/src/app/main/main.slim
@@ -3,9 +3,9 @@ div
 
   div.text-center.main-content
     p.lead
-      img alt=("I'm Yeoman") src="assets/images/90.jpg" /
+      img alt=("I'm Yeoman") src="assets/images/island.png" /
       br/
-    h2 kyumaruGram
+    h2 Ohshimagram
 
 
   div infinite-scroll="loadMore()" infinite-scroll-distance="0" infinite-scroll-immediate-check="false"
